2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-20  Andreas Kupries  <andreask@activestate.com>

	* doctools.tcl: Bumped versions to 1.3 and 0.3 respectively to
	* docidx.tcl:   reflect the extended syntax and bugfixes listed
	* doctoc.tcl:   below.
	* doctools.man:
	* docidx.man:
	* doctoc.man:
	* pkgIndex.tcl:

2007-08-02  Andreas Kupries  <andreask@activestate.com>

	* mpformats/fmt.latex: Further reworking of the backend internals
	  for proper quoting of TeX special characters, prevention of
	  double-quoting, and markup of wanted special characters. Further
	  removed the use of 'quote' environments. Not needed for the
	  formatting and its use restricts the nesting of lists to three
	  levels. Without we can nest seven levels. Final fixes for
	  [Tcllib SF Bug 1766381].

	* mpformats/fmt.text: Fixed handling of 'cmd_def'.
	* mpformats/fmt.tmml: Fixed handling of nested lists.
	* mpformats/fmt.latex: Fixed handling of list_end, was not updated
	  to the new list type codes.
	* mpformats/fmt.latex: Fixed handling of ^ character. Has to be
	  escaped in regular text. Fixed handling of keywords and
	  references (see also). May contain special character in need of
	  escaping. Quote backslashes in paths.
	  Fixes for [Tcllib SF Bug 1766381.]

2007-08-01  Andreas Kupries  <andreask@activestate.com>

	* doctools.test: Updated test 8.4 for changes in the formatting of
	  warnings.

2007-03-20  Andreas Kupries  <andreask@activestate.com>

	* apps/dtplite: Added a block of meta data.

2007-03-20  Andreas Kupries  <andreask@activestate.com>

	* mpformats/fmt.wiki: Added MD pragma excluding a bogus dependency
	  from consideration.

2007-03-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* doctoc.tcl: Extended MD pragmas declaring the ownership of
	* docidx.tcl: various non-code files.
	* doctools.tcl:
